se agregó un filtro de búsqueda

--- a/index2.html
+++ b/index2.html
@@ -50,10 +50,7 @@
                     <div class="six columns">
                         <div class="contenido-hero">
                                 <h2> <b> Disfruta de los mejores conciertos</b> </h2>
-                                <form action="#" id="busqueda" method="post" class="formulario">
-                                    <input class="u-full-width" type="text" placeholder="Buscar conciertos" id="buscador">
-                                    <input type="submit" id="submit-buscador" class="submit-buscador">
-                                </form>
+                                <input type="text" id ="miSearch" placeholder="Buscar por concierto" size="35px">
                         </div>
                     </div>
             </div> 
@@ -63,6 +60,7 @@
     <div id="lista-cursos" class="container">
         <h1 id="encabezado" class="encabezado"> <b>Conciertos </b></h1>
     </div>  
+
 
     <footer id="footer" class="footer">
         <div class="container">
