--- a/index2.html
+++ b/index2.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Lollapalooza Argentina 2024 | 15, 16 y 17 de marzo</title>
+    <title>Aurora Oasis Festival</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/skeleton.css">
     <link rel="stylesheet" href="css/custom.css">
-    <link rel="icon" type="image/ico" href="img/logo1-removebg-preview.png">
+    <link rel="icon" type="image/ico" href="img/logo-aurora.png">
     
 </head>
 <body>
@@ -67,7 +67,7 @@
             <div class="row">
                     <div class="four columns">
                             <nav id="secundaria" class="menu">
-                                <a class="enlace" href="#">&copy;<b>Lollapalooza</b>LLC</a>
+                                <a class="enlace" href="#">&copy;<b>Aurora Oasis Festival</b></a>
                               
                             </nav>
                     </div>
