cambie la ubicacion del buscador

--- a/index2.html
+++ b/index2.html
@@ -13,16 +13,13 @@
 </head>
 <body>
     <header>
-        <div id="logofechas">
-                <img src="img/header.png" id="logo">
-                <b>
-                    <p id="fechas">15 , 16 y 17 de Marzo <br>
-                        Hipódromo de San Isidro
-                    </p>
-                </b>
+        <div id="menu">
+                <img src="img/header-aurora.jpg.png" id="logo">
+                <b><br><p id="fechas">15 , 16 y 17 de Marzo <br>Hipódromo de San Isidro </p> </b>
+                <input type="text" id ="miSearch" placeholder="Buscar concierto..." size="35px">
+                <button id="tickets">TICKETS</button>
                 <ul>
                     <li class="submenu">
-                            <button id="img-carrito">TICKETS</button>
                             <div id="carrito">
                                     <table id="lista-carrito" class="u-full-width">
                                         <thead>
@@ -43,19 +40,8 @@
             </div>
     </header>
 
-
-    <div id="hero">
-        <div class="container">
-            <div class="row">
-                    <div class="six columns">
-                        <div class="contenido-hero">
-                                <h2> <b> Disfruta de los mejores conciertos</b> </h2>
-                                <input type="text" id ="miSearch" placeholder="Buscar por concierto" size="35px">
-                        </div>
-                    </div>
-            </div> 
-        </div>
-    </div>
+<!-- no borrar este div , porque se buguea el menu-->
+    <div id="hero"></div>
 
     <div id="lista-cursos" class="container">
         <h1 id="encabezado" class="encabezado"> <b>Conciertos </b></h1>
