--- a/index2.html
+++ b/index2.html
@@ -15,8 +15,8 @@
     <header>
         <div id="menu">
                 <img src="img/header-aurora.jpg.png" id="logo">
-                <b><br><p id="fechas">15 , 16 y 17 de Marzo <br>Hipódromo de San Isidro </p> </b>
-                <input type="text" id ="miSearch" placeholder="Buscar concierto..." size="35px">
+                <br>
+                <input type="text" id ="Search" placeholder="Buscar concierto..." size="35px">
                 
                 <ul>  
                     <li class="submenu"> 
@@ -40,7 +40,7 @@
                 </ul>
             </div>
     </header>
-
+br
 <!-- no borrar este div , porque se buguea el menu-->
     <div id="hero"></div>
 
@@ -63,6 +63,7 @@
     </footer>
     <script src="js/db.js"></script>
     <script src="js/app.js"></script>
+    <script src="js/filtro.js"></script>
     
 
 </body>
