--- a/index2.html
+++ b/index2.html
@@ -34,7 +34,7 @@
                                         </thead>
                                         <tbody></tbody>
                                     </table>
-                                    <a href="#" id="vaciar-carrito" class="button u-full-width">Vaciar Carrito</a>
+                                    <button id="vaciar-carrito" >Vaciar Carrito</button>
                             </div>
                     </li>
                 </ul>
